# counter

./: README.md  pyproject.toml
src/: calculator.py  counter.py  login.py  main.py
src/controls/: alignments.py  buttons.py  checkboxes.py  controls.py  objects.py  row.py  standups.py  text.py  update.py
src/layouts/: cards.py  columns.py  containers.py  datatables.py  datatables_ex.py  gridviews.py  listviews.py  rows.py  simple_container.py  todo.py
src/more/: alert_dialogs.py  alerts_ex.py  banners.py  banners_ex.py  bottom_sheets.py  dropdowns.py  navigation.py  radios.py  routing.py  sliders.py  sliders_ex.py  snack_bars.py  switches.py
src/others/: login.py  multi-page.py  oauth2.py
src/practice/: camera.py  layout.py
