[project]
name = "counter"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.81.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.81.0",
    # Desktop clients:
    "flet-desktop; platform_system == 'Windows' or platform_system == 'Darwin'",
    "flet-desktop-light; platform_system == 'Linux'",
    "flet-web>=0.81.0",
]

[tool.flet]
org = "com.mycompany"
product = "counter"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
