[project]
name = "counter"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flask>=3.1.3",
    "flet>=0.81.0",
    "flet-map>=0.81.0",
    "ipykernel>=7.2.0",
    "msal>=1.35.0",
    "segment-geospatial[samgeo3]>=0.13.0",
    "transformers==5.0.0rc0",
]

[dependency-groups]
dev = [
    "flet-cli>=0.81.0",
    # Desktop clients:
    "flet-desktop; platform_system == 'Windows' or platform_system == 'Darwin'",
    "flet-desktop-light; platform_system == 'Linux'",
    "flet-web>=0.81.0",
]

[tool.flet]
org = "com.mycompany"
product = "counter"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
